# llm-behavior-lab

./: .env.example  LICENSE.md  config.json  main.py  pyproject.toml  readme.md  simple_tasks.py  test_results.json
azure/gpt-4o-mini/: test_results.json
